--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Croissant🥐</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <link href="src/style.css" rel="stylesheet">
 </head>
 <body>
+<section class="main">
+    <h1>Croissant🥐</h1>
+    <p>A croissant (UK: /ˈkrwʌsɒ̃, ˈkrwæsɒ̃/,[3] US: /krəˈsɒnt, krwɑːˈsɒ̃/, French: [kʁwasɑ̃] (audio speaker iconlisten)) is a buttery, flaky, viennoiserie pastry of Austrian origin,[1] but mostly associated with France. Croissants are named for their historical crescent shape and, like other viennoiseries, are made of a layered yeast-leavened dough. The dough is layered with butter, rolled and folded several times in succession, then rolled into a thin sheet, in a technique called laminating. The process results in a layered, flaky texture, similar to a puff pastry.
 
+        Crescent-shaped breads have been made since the Renaissance, and crescent-shaped cakes possibly since antiquity.[4] Croissants have long been a staple of Austrian, Italian, and French bakeries and pâtisseries. The modern croissant was developed in the early 20th century. In the late 1970s, the development of factory-made, frozen, preformed but unbaked dough made them into a fast food that could be freshly baked by unskilled labor. The croissant bakery, notably the La Croissanterie chain, was a French response to American-style fast food,[5] and as of 2008, 30–40% of the croissants sold in French bakeries and patisseries were baked from frozen dough.[6]
+
+        Croissants are a common part of a continental breakfast in many European countries.
+    </p>
+</section>
 </body>
 </html>
