--- a/index.html
+++ b/index.html
@@ -12,14 +12,24 @@
     <link href="src/style.css" rel="stylesheet">
 </head>
 <body>
-<section class="main">
-    <h1>Croissant🥐</h1>
-    <p>A croissant (UK: /ˈkrwʌsɒ̃, ˈkrwæsɒ̃/,[3] US: /krəˈsɒnt, krwɑːˈsɒ̃/, French: [kʁwasɑ̃] (audio speaker iconlisten)) is a buttery, flaky, viennoiserie pastry of Austrian origin,[1] but mostly associated with France. Croissants are named for their historical crescent shape and, like other viennoiseries, are made of a layered yeast-leavened dough. The dough is layered with butter, rolled and folded several times in succession, then rolled into a thin sheet, in a technique called laminating. The process results in a layered, flaky texture, similar to a puff pastry.
-
-        Crescent-shaped breads have been made since the Renaissance, and crescent-shaped cakes possibly since antiquity.[4] Croissants have long been a staple of Austrian, Italian, and French bakeries and pâtisseries. The modern croissant was developed in the early 20th century. In the late 1970s, the development of factory-made, frozen, preformed but unbaked dough made them into a fast food that could be freshly baked by unskilled labor. The croissant bakery, notably the La Croissanterie chain, was a French response to American-style fast food,[5] and as of 2008, 30–40% of the croissants sold in French bakeries and patisseries were baked from frozen dough.[6]
-
+<section class="main col-lg-10 col-md-10 col-sm-10 p-4 d-block mx-auto my-5 rounded">
+    <h1 class="text-center">Croissant🥐</h1>
+    <p>A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin, but mostly associated with France.
+        <br>
+        Croissants are named for their historical crescent shape and, like other viennoiseries, are made of a layered yeast-leavened dough.
+        <br>
+        The dough is layered with butter, rolled and folded several times in succession, then rolled into a thin sheet, in a technique called laminating.
+        <br>
+        The process results in a layered, flaky texture, similar to a puff pastry.
+        <br>
+        Crescent-shaped breads have been made since the Renaissance, and crescent-shaped cakes possibly since antiquity.[4] Croissants have long been a staple of Austrian, Italian, and French bakeries and pâtisseries. The modern croissant was developed in the early 20th century. In the late 1970s, the development of factory-made, frozen, preformed but unbaked dough made them into a fast food that could be freshly baked by unskilled labor. The croissant bakery, notably the La Croissanterie chain, was a French response to American-style fast food,[5] and as of 2008, 30–40% of the croissants sold in French bakeries and patisseries were baked from frozen dough.
+        <br>
         Croissants are a common part of a continental breakfast in many European countries.
     </p>
+    <div class="row justify-content-center">
+        <a class="btn col-lg-2 col-md-4 col-sm-12 bg-violet m-2" href="photo.html">Photos</a>
+        <a class="btn col-lg-2 col-md-4 col-sm-12 bg-violet m-2" href="contact.html">Contact Us</a>
+    </div>
 </section>
 </body>
 </html>
