--- a/photo.html
+++ b/photo.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Croissant🥐</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <link href="src/style.css" rel="stylesheet">
 </head>
 <body>
-
+<section class="main col-lg-10 col-md-10 col-sm-10 p-4 d-block mx-auto my-5 rounded">
+    <h1 class="text-center">some pictures of Croissants🥐</h1>
+    <h4 class="text-center">these pictures are taken by <a class="btn" href="https://www.instagram.com/cooking_b">@cooking_b</a></h4>
+    <div class="row justify-content-center container my-3">
+        <img src="img/IMG_5633.JPG" class="img-fluid col-lg-5 col-md-6 col-sm-12" alt="pic-no1">
+        <img src="img/IMG_7599.PNG" class="img-fluid col-lg-5 col-md-6 col-sm-12"  alt="pic-no2">
+    </div>
+    <div class="row justify-content-center">
+        <a class="btn col-lg-3 col-md-4 col-sm-12 bg-violet m-2" href="index.html">Back to the Homepage</a>
+        <a class="btn col-lg-2 col-md-4 col-sm-12 bg-violet m-2" href="contact.html">Contact Us</a>
+    </div>
+</section>
 </body>
 </html>
